# SODL-public

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DISTRIBUTION_SPEC.md  DURABILITY_SPEC.md  Dockerfile  ENCRYPTION_SPEC.md  LICENSE  LICENSES.md  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SODL_ARCHITECTURE.md  SODL_GLOSSARY.md  WHERE_TO_PUT_WHAT.md
.github/workflows/: publish-image.yml
crates/sodl-ai-artifacts/: Cargo.toml
crates/sodl-ai-artifacts/src/: lib.rs
crates/sodl-api/: Cargo.toml
crates/sodl-api/src/: config.rs  dto.rs  handlers.rs  lib.rs  main.rs  router.rs  state.rs
crates/sodl-cas/: Cargo.toml
crates/sodl-cas/src/: lib.rs
crates/sodl-chunk/: Cargo.toml
crates/sodl-chunk/src/: fastcdc.rs  lib.rs  manifest.rs
crates/sodl-core/: Cargo.toml
crates/sodl-core/src/: lib.rs
crates/sodl-crypto/: Cargo.toml
crates/sodl-crypto/src/: aead.rs  keymanager.rs  lib.rs
crates/sodl-dist/: Cargo.toml
crates/sodl-dist/src/: lib.rs
crates/sodl-fetch/: Cargo.toml
crates/sodl-fetch/examples/: basic_roundtrip.rs  encrypted_roundtrip.rs
crates/sodl-fetch/src/: lib.rs
crates/sodl-fingerprint/: Cargo.toml
crates/sodl-fingerprint/src/: lib.rs
crates/sodl-gc/: Cargo.toml
crates/sodl-gc/src/: lib.rs
crates/sodl-index/: Cargo.toml
crates/sodl-index/src/: lib.rs
crates/sodl-manifest/: Cargo.toml
crates/sodl-manifest/src/: lib.rs
crates/sodl-origin/: Cargo.toml
crates/sodl-origin/src/: lib.rs
crates/sodl-persist/: Cargo.toml
crates/sodl-persist/src/: lib.rs  schema.rs  tests.rs
crates/sodl-polar-quant/: Cargo.toml
crates/sodl-polar-quant/src/: lib.rs
crates/sodl-policy/: Cargo.toml
crates/sodl-policy/src/: lib.rs
crates/sodl-proof/: Cargo.toml
crates/sodl-proof/src/: lib.rs
crates/sodl-python-ffi/: Cargo.toml  pyproject.toml
crates/sodl-python-ffi/src/: lib.rs
crates/sodl-replica/: Cargo.toml
crates/sodl-replica/src/: lib.rs
crates/sodl-semantic-color/: Cargo.toml
crates/sodl-semantic-color/src/: lib.rs
crates/sodl-semantic-cube/: Cargo.toml
crates/sodl-semantic-cube/src/: lib.rs
crates/sodl-semantic-router/: Cargo.toml
crates/sodl-semantic-router/src/: lib.rs
crates/sodl-service/: Cargo.toml
crates/sodl-service/examples/: durability_safe_gc_demo.rs  gc_demo.rs  lineage_proof_demo.rs  policy_gc_demo.rs  replica_audit_demo.rs  replica_repair_demo.rs  service_demo.rs  share_proof_anchor_demo.rs  signed_share_demo.rs
crates/sodl-service/src/: checkpoint_store.rs  lib.rs  optimizer_state.rs  weight_manifest.rs  weight_service.rs
crates/sodl-store/: Cargo.toml
crates/sodl-store/src/: lib.rs  weight_store.rs
crates/sodl-tokenizer/: Cargo.toml
crates/sodl-tokenizer/src/: lib.rs
docs/: PRIORITY2-HTTP-API.md  container-deployment.md  openapi.yaml  security-model.md
guides/: SODL_SEMANTIC_RESEARCH_NOTES.md  SODL_STEP_18_DETERMINISTIC_PROOF_ANCHORING.md  SODL_STEP_21_AI_INTEGRATION_REUSE_FIRST.md  SODL_STEP_22_PASS_TEST.md  SODL_STEP_22_SEMANTIC_EXPERIMENTS.md  STEP_10_GUIDE.md  STEP_11_GUIDE.md  STEP_12_GUIDE.md  STEP_13_GUIDE.md  STEP_14_GUIDE.md  STEP_15_GUIDE.md  STEP_16_GUIDE.md  STEP_17_GUIDE.md  STEP_21_GUIDE.md  STEP_23_SEMANTIC_ROUTER_WORKFLOW.md  STEP_7_GUIDE.md  STEP_8_GUIDE.md  STEP_9_GUIDE.md
python/: README.md  mkdocs.yml  pyproject.toml
python/benchmarks/: bench_blob_store.py  bench_clustered_softmax.py  bench_optimizer_offload.py  optimizer_offload_bench.jsonl
python/docs/: getting-started.md  index.md  model-lifecycle.md  security.md  training-acceleration.md
python/docs/api-reference/: core-storage.md  index.md  training.md
python/examples/: basic_blob_store.py  clustered_softmax_training.py  distributed_fetch.py  token_hash_index.py  weight_compression.py
python/sodl/: __init__.py  __main__.py  cli.py
python/sodl_weights/: __init__.py  _rust_bridge.py  artifact_store.py  async_store.py  batch.py  cas_store.py  checkpoint.py  client.py  clustered_softmax.py  consistency.py  context_logic.py  crypto.py  data_quality.py  dataset.py  fast_bpe.py  federation.py  gradient_monitor.py  health.py  layer_scheduler.py  lineage_proof.py  metrics.py  mmap_store.py  model_registry.py  offload_optimizer.py  optimizer_state.py  pin_registry.py  pipeline.py  polar_quant.py  proof.py  registry.py  replication.py  reuse_resolver.py  semantic_bridge.py  semantic_cube.py  semantic_router.py  service.py  sodl_autocast.py  sodl_corpus_tagger.py  store.py  streaming.py  (+7 more)
python/tests/: test_aead_crypto.py  test_artifact_store.py  test_async_store.py  test_batch.py  test_carla_integration.py  test_checkpoint.py  test_client.py  test_clustered_softmax.py  test_consistency.py  test_context_logic.py  test_data_quality.py  test_dataset.py  test_federation.py  test_health.py  test_metrics.py  test_mmap_store.py  test_model_registry.py  test_optimizer_offload.py  test_package_surface.py  test_pipeline_router.py  test_proof.py  test_registry.py  test_replication.py  test_rust_bridge.py  test_streaming.py  test_token_hash.py  test_tracer.py  test_training_lifecycle.py  test_vector_index.py  test_weight_manifest.py  test_weight_store.py
