[workspace]
resolver = "2"
members = [
  "crates/sodl-ai-artifacts",
  "crates/sodl-api",
  "crates/sodl-cas",
  "crates/sodl-chunk",
  "crates/sodl-core",
  "crates/sodl-crypto",
  "crates/sodl-dist",
  "crates/sodl-fetch",
  "crates/sodl-fingerprint",
  "crates/sodl-gc",
  "crates/sodl-index",
  "crates/sodl-manifest",
  "crates/sodl-origin",
  "crates/sodl-persist",
  "crates/sodl-polar-quant",
  "crates/sodl-policy",
  "crates/sodl-python-ffi",
  "crates/sodl-proof",
  "crates/sodl-replica",
  "crates/sodl-semantic-color",
  "crates/sodl-semantic-cube",
  "crates/sodl-semantic-router",
  "crates/sodl-service",
  "crates/sodl-store",
  "crates/sodl-tokenizer",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/imp213x/SODL-public"
authors = ["SoftQraft Labs Ltd"]
rust-version = "1.75"

[workspace.dependencies]
base64 = "0.22"
blake3 = "1"
bytes = "1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
zstd = "0.13"

# Optional async/runtime dependencies (enabled via features in crates)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"]}
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"]}
pyo3 = { version = "0.23", features = ["extension-module", "auto-initialize", "abi3-py310"] }
