[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sodl"
version = "0.2.0"
description = "Content-addressed, lineage-aware data framework for AI systems — storage, compression, and training acceleration"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SoftQraft Labs Ltd"},
]
keywords = [
    "ai",
    "machine-learning",
    "content-addressed-storage",
    "model-weights",
    "training-acceleration",
    "hierarchical-softmax",
    "data-pipeline",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "numpy>=1.24",
    "zstandard>=0.22",
    "blake3>=0.4",
]

[project.optional-dependencies]
torch = ["torch"]
clustering = ["scikit-learn>=1.3"]
security = ["cryptography>=44"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
all = [
    "torch",
    "scikit-learn>=1.3",
    "cryptography>=44",
]
test = [
    "pytest>=7",
    "scikit-learn>=1.3",
    "cryptography>=44",
]

[project.urls]
Repository = "https://github.com/imp213x/SODL-public"
Documentation = "https://github.com/imp213x/SODL-public/tree/main/python/docs"

[project.scripts]
sodl = "sodl.cli:main"

[tool.setuptools.packages.find]
include = ["sodl*", "sodl_weights*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
