[package]
name = "sodl-cas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sodl-core = { path = "../sodl-core" }
blake3.workspace = true
sha2.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = ["hash-blake3"]
hash-blake3 = []
hash-sha256 = []
fs = []
