[package]
name = "sodl-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sodl-core = { path = "../sodl-core" }
sodl-cas = { path = "../sodl-cas" }
sodl-origin = { path = "../sodl-origin" }
sodl-policy = { path = "../sodl-policy" }
sodl-store = { path = "../sodl-store" }
sodl-crypto = { path = "../sodl-crypto" }
bytes.workspace = true
tracing.workspace = true

[features]
default = []
