[package]
name = "sodl-origin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sodl-core = { path = "../sodl-core" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true

[features]
default = []
