[package]
name = "sodl-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite-backed persistent metadata stores for SODL"

[dependencies]
sodl-core    = { path = "../sodl-core" }
sodl-origin  = { path = "../sodl-origin" }
sodl-policy  = { path = "../sodl-policy" }
sodl-index   = { path = "../sodl-index" }
sodl-manifest = { path = "../sodl-manifest" }
sodl-service = { path = "../sodl-service" }

rusqlite = { version = "0.35", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
bytes.workspace = true
