[package]
name = "sodl-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sodl-core = { path = "../sodl-core" }
serde.workspace = true
time.workspace = true

[features]
default = []

[dev-dependencies]
serde_json.workspace = true
