[package]
name = "sodl-proof"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SODL lineage proof generation (unsigned digest)"
repository = "https://github.com/imp213x/SODL-public"

[dependencies]
sodl-core = { path = "../sodl-core" }
sodl-index = { path = "../sodl-index" }
blake3.workspace = true
serde.workspace = true
time.workspace = true
base64.workspace = true

[dependencies.ed25519-dalek]
version = "2"
optional = true
features = ["std"]

[features]
# Enables Ed25519 signing and verification for lineage proofs.
ed25519 = ["dep:ed25519-dalek"]
