[package]
name = "sodl-semantic-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
time.workspace = true
sodl-semantic-color = { path = "../sodl-semantic-color" }
sodl-semantic-cube = { path = "../sodl-semantic-cube" }

