[package]
name = "sodl-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sodl-core = { path = "../sodl-core" }
sodl-cas = { path = "../sodl-cas" }
sodl-origin = { path = "../sodl-origin" }
sodl-manifest = { path = "../sodl-manifest" }
sodl-policy = { path = "../sodl-policy" }
sodl-store = { path = "../sodl-store" }
sodl-crypto = { path = "../sodl-crypto" }
sodl-index = { path = "../sodl-index" }
sodl-proof = { path = "../sodl-proof" }
sodl-gc = { path = "../sodl-gc" }
sodl-chunk = { path = "../sodl-chunk" }
sodl-replica = { path = "../sodl-replica" }

bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
zstd.workspace = true

[features]
default = []
ed25519 = ["sodl-proof/ed25519"]

[dev-dependencies]
tempfile = "3"
