[package]
name = "sodl-tokenizer"
version = "0.1.1"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Fast BPE tokenizer training for SODL — Rust-accelerated byte pair encoding"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "sodl_tokenizer"
crate-type = ["cdylib", "rlib"]
